[DLAB-1065]:Prevented putting some values and align error message (#510)

--- a/services/self-service/src/main/resources/webapp/src/app/administration/management/manage-environment/manage-environment-dilog.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/administration/management/manage-environment/manage-environment-dilog.component.scss
@@ -50,7 +50,7 @@
     .error {
       position: absolute;
       left: 0;
-      bottom: -14px;
+      top: 35px;
     }
   }
 
@@ -98,7 +98,7 @@
       .error {
         position: absolute;
         left: 0;
-        bottom: -14px;
+        bottom: -15px;
       }
     }
 
